Hybrid was changed

--- a/Hybrid-System/Hybrid_Method_v1.0.ipynb
+++ b/Hybrid-System/Hybrid_Method_v1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4              A Deep Reinforcement Learning Chatbot  2017  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4       5  farnborough  NULL"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4  Dual Recurrent Attention Units for Visual Ques...  2018  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "8  Dual Recurrent Attention Units for Visual Ques...  2018  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -718,18 +718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\veyso\\anaconda3\\envs\\recommendation\\lib\\site-packages\\lightfm\\_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
-      "  warnings.warn('LightFM was compiled without OpenMP support. '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lightfm.data import Dataset\n",
     "paper_dataset=Dataset()\n",
@@ -739,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +753,7 @@
        "\twith 1787 stored elements in COOrdinate format>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,14 +790,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hybrid training set AUC: 0.95283854\n"
+      "Hybrid training set AUC: 0.9491391\n"
      ]
     }
    ],
@@ -819,14 +810,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hybrid test set AUC: 0.77900904\n"
+      "Hybrid test set AUC: 0.79087394\n"
      ]
     }
    ],
@@ -837,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -890,27 +881,27 @@
        "    <tr>\n",
        "      <th>980</th>\n",
        "      <td>1512.04860v1</td>\n",
-       "      <td>1.099199</td>\n",
+       "      <td>1.674839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>713</th>\n",
        "      <td>1707.03017v5</td>\n",
-       "      <td>0.608421</td>\n",
+       "      <td>1.667101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>623</th>\n",
        "      <td>1506.02078v2</td>\n",
-       "      <td>0.429028</td>\n",
+       "      <td>1.191600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>976</th>\n",
-       "      <td>1610.00369v2</td>\n",
-       "      <td>0.049569</td>\n",
+       "      <th>161</th>\n",
+       "      <td>1401.5899v3</td>\n",
+       "      <td>0.678005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>697</th>\n",
-       "      <td>1704.06194v2</td>\n",
-       "      <td>0.045707</td>\n",
+       "      <th>998</th>\n",
+       "      <td>1202.4050v2</td>\n",
+       "      <td>0.599846</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -918,14 +909,14 @@
       ],
       "text/plain": [
        "         paper_id  recommendation_scores\n",
-       "980  1512.04860v1               1.099199\n",
-       "713  1707.03017v5               0.608421\n",
-       "623  1506.02078v2               0.429028\n",
-       "976  1610.00369v2               0.049569\n",
-       "697  1704.06194v2               0.045707"
+       "980  1512.04860v1               1.674839\n",
+       "713  1707.03017v5               1.667101\n",
+       "623  1506.02078v2               1.191600\n",
+       "161   1401.5899v3               0.678005\n",
+       "998   1202.4050v2               0.599846"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,14 +948,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "recommend_df = recommend_df.drop(['Location', 'Age', 'author', 'day',\n",
+    "                   'link', 'month', 'summary', 'tag',\n",
+    "                   'paperRating', 'year','userID'], axis=1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommend_df.rename(columns={'id':'paper_id'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -988,151 +992,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>userID</th>\n",
-       "      <th>id</th>\n",
-       "      <th>paperRating</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>author</th>\n",
-       "      <th>day</th>\n",
-       "      <th>link</th>\n",
-       "      <th>month</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>tag</th>\n",
+       "      <th>paper_id</th>\n",
        "      <th>title</th>\n",
-       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1980</th>\n",
-       "      <td>11</td>\n",
        "      <td>1512.04860v1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>melbourne</td>\n",
-       "      <td>14</td>\n",
-       "      <td>[{'name': 'Marc G. Bellemare'}, {'name': 'Geor...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>This paper introduces new optimality-preservin...</td>\n",
-       "      <td>[{'term': 'cs.AI', 'scheme': 'http://arxiv.org...</td>\n",
        "      <td>Increasing the Action Gap: New Operators for R...</td>\n",
-       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1713</th>\n",
-       "      <td>85</td>\n",
        "      <td>1707.03017v5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>london</td>\n",
-       "      <td>41</td>\n",
-       "      <td>[{'name': 'Ethan Perez'}, {'name': 'Harm de Vr...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Achieving artificial visual reasoning - the ab...</td>\n",
-       "      <td>[{'term': 'cs.CV', 'scheme': 'http://arxiv.org...</td>\n",
        "      <td>Learning Visual Reasoning Without Strong Priors</td>\n",
-       "      <td>2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1618</th>\n",
-       "      <td>191</td>\n",
        "      <td>1506.02078v2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>berlin</td>\n",
-       "      <td>40</td>\n",
-       "      <td>[{'name': 'Andrej Karpathy'}, {'name': 'Justin...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Recurrent Neural Networks (RNNs), and specific...</td>\n",
-       "      <td>[{'term': 'cs.LG', 'scheme': 'http://arxiv.org...</td>\n",
        "      <td>Visualizing and Understanding Recurrent Networks</td>\n",
-       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1976</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1610.00369v2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>stockton</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[{'name': 'A. Hassan'}, {'name': 'M. R. Amin'}...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Sentiment Analysis (SA) is an action research ...</td>\n",
-       "      <td>[{'term': 'cs.CL', 'scheme': 'http://arxiv.org...</td>\n",
-       "      <td>Sentiment Analysis on Bangla and Romanized Ban...</td>\n",
-       "      <td>2016</td>\n",
+       "      <th>1004</th>\n",
+       "      <td>1401.5899v3</td>\n",
+       "      <td>Kernel Least Mean Square with Adaptive Kernel ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1697</th>\n",
-       "      <td>87</td>\n",
-       "      <td>1704.06194v2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>richardson</td>\n",
-       "      <td>NULL</td>\n",
-       "      <td>[{'name': 'Mo Yu'}, {'name': 'Wenpeng Yin'}, {...</td>\n",
-       "      <td>20</td>\n",
-       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Relation detection is a core component for man...</td>\n",
-       "      <td>[{'term': 'cs.CL', 'scheme': 'http://arxiv.org...</td>\n",
-       "      <td>Improved Neural Relation Detection for Knowled...</td>\n",
-       "      <td>2017</td>\n",
+       "      <th>1998</th>\n",
+       "      <td>1202.4050v2</td>\n",
+       "      <td>On the Sample Complexity of Predictive Sparse ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     userID            id paperRating    Location   Age  \\\n",
-       "1980     11  1512.04860v1           1   melbourne    14   \n",
-       "1713     85  1707.03017v5           7      london    41   \n",
-       "1618    191  1506.02078v2           2      berlin    40   \n",
-       "1976      2  1610.00369v2           3    stockton    18   \n",
-       "1697     87  1704.06194v2           6  richardson  NULL   \n",
-       "\n",
-       "                                                 author day  \\\n",
-       "1980  [{'name': 'Marc G. Bellemare'}, {'name': 'Geor...  15   \n",
-       "1713  [{'name': 'Ethan Perez'}, {'name': 'Harm de Vr...  10   \n",
-       "1618  [{'name': 'Andrej Karpathy'}, {'name': 'Justin...   5   \n",
-       "1976  [{'name': 'A. Hassan'}, {'name': 'M. R. Amin'}...   2   \n",
-       "1697  [{'name': 'Mo Yu'}, {'name': 'Wenpeng Yin'}, {...  20   \n",
-       "\n",
-       "                                                   link month  \\\n",
-       "1980  [{'rel': 'alternate', 'href': 'http://arxiv.or...    12   \n",
-       "1713  [{'rel': 'alternate', 'href': 'http://arxiv.or...     7   \n",
-       "1618  [{'rel': 'alternate', 'href': 'http://arxiv.or...     6   \n",
-       "1976  [{'rel': 'alternate', 'href': 'http://arxiv.or...    10   \n",
-       "1697  [{'rel': 'alternate', 'href': 'http://arxiv.or...     4   \n",
-       "\n",
-       "                                                summary  \\\n",
-       "1980  This paper introduces new optimality-preservin...   \n",
-       "1713  Achieving artificial visual reasoning - the ab...   \n",
-       "1618  Recurrent Neural Networks (RNNs), and specific...   \n",
-       "1976  Sentiment Analysis (SA) is an action research ...   \n",
-       "1697  Relation detection is a core component for man...   \n",
-       "\n",
-       "                                                    tag  \\\n",
-       "1980  [{'term': 'cs.AI', 'scheme': 'http://arxiv.org...   \n",
-       "1713  [{'term': 'cs.CV', 'scheme': 'http://arxiv.org...   \n",
-       "1618  [{'term': 'cs.LG', 'scheme': 'http://arxiv.org...   \n",
-       "1976  [{'term': 'cs.CL', 'scheme': 'http://arxiv.org...   \n",
-       "1697  [{'term': 'cs.CL', 'scheme': 'http://arxiv.org...   \n",
-       "\n",
-       "                                                  title  year  \n",
-       "1980  Increasing the Action Gap: New Operators for R...  2015  \n",
-       "1713    Learning Visual Reasoning Without Strong Priors  2017  \n",
-       "1618   Visualizing and Understanding Recurrent Networks  2015  \n",
-       "1976  Sentiment Analysis on Bangla and Romanized Ban...  2016  \n",
-       "1697  Improved Neural Relation Detection for Knowled...  2017  "
+       "          paper_id                                              title\n",
+       "1980  1512.04860v1  Increasing the Action Gap: New Operators for R...\n",
+       "1713  1707.03017v5    Learning Visual Reasoning Without Strong Priors\n",
+       "1618  1506.02078v2   Visualizing and Understanding Recurrent Networks\n",
+       "1004   1401.5899v3  Kernel Least Mean Square with Adaptive Kernel ...\n",
+       "1998   1202.4050v2  On the Sample Complexity of Predictive Sparse ..."
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
