--- a/Content-Based-Filtering/Content_Based_Filtering_v4.0.ipynb
+++ b/Content-Based-Filtering/Content_Based_Filtering_v4.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4  Neural Network Ensembles, Cross\\nValidation, a...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "tfv = TfidfVectorizer(min_df=3,  max_features=None, \n",
-    "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{1,}',\n",
+    "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{3,}',\n",
     "            ngram_range=(1, 3),\n",
     "            stop_words = 'english')\n",
     "\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +210,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7241, 1666651)"
+       "<7241x1254168 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16287060 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfv_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The following code;\n",
+    "#Find the most common words in the corpus(papers_df['summary'])\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "def get_top_n_words(corpus, n=None):\n",
+    "    vec = CountVectorizer(min_df=3,  max_features=None, \n",
+    "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{3,}',\n",
+    "            ngram_range=(1, 3),\n",
+    "            stop_words = 'english').fit(corpus)\n",
+    "    bag_of_words = vec.transform(corpus)\n",
+    "    sum_words = bag_of_words.sum(axis=0) \n",
+    "    words_freq = [(word, sum_words[0, idx]) for word, idx in vec.vocabulary_.items()]\n",
+    "    words_freq =sorted(words_freq, key = lambda x: x[1], reverse=True)\n",
+    "    return words_freq[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('learning', 106160),\n",
+       " ('model', 105236),\n",
+       " ('data', 94690),\n",
+       " ('algorithm', 82708),\n",
+       " ('set', 74920),\n",
+       " ('function', 69850),\n",
+       " ('using', 68015),\n",
+       " ('time', 60440),\n",
+       " ('number', 53529),\n",
+       " ('figure', 53419)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_top_n_words(papers_df['summary'],10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7241, 1254168)"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +323,7 @@
        "       0.76159417])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -296,7 +367,7 @@
        "Length: 7241, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +387,7 @@
        "4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1407,7 @@
        " ...]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2427,7 @@
        " ...]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2483,7 @@
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2424,30 +2495,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                                         1000\n",
+       "id                                                         1001\n",
        "year                                                       1994\n",
-       "title         Bayesian Query Construction for Neural Network...\n",
+       "title         Neural Network Ensembles, Cross Validation, an...\n",
        "event_type                                                     \n",
-       "pdf_name      1000-bayesian-query-construction-for-neural-ne...\n",
+       "pdf_name      1001-neural-network-ensembles-cross-validation...\n",
        "abstract                                       Abstract Missing\n",
-       "summary       Bayesian Query Construction for Neural\\nNetwor...\n",
-       "Name: 3, dtype: object"
+       "summary       Neural Network Ensembles, Cross\\nValidation, a...\n",
+       "Name: 4, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "papers_df.iloc[3]"
+    "papers_df.iloc[4]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
