--- a/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
+++ b/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4  Neural Network Ensembles, Cross\\nValidation, a...  "
       ]
      },
-     "execution_count": 627,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -194,24 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                                          1693\n",
-       "year                                                        1999\n",
-       "title          Dynamics of Supervised Learning with Restricte...\n",
-       "event_type                                                      \n",
-       "pdf_name       1693-dynamics-of-supervised-learning-with-rest...\n",
-       "abstract                                        Abstract Missing\n",
-       "summary        Dynamics of Supervised Learning with\\nRestrict...\n",
-       "all_content    Dynamics of Supervised Learning with Restricte...\n",
+       "id                                                         1693\n",
+       "year                                                       1999\n",
+       "title         Dynamics of Supervised Learning with Restricte...\n",
+       "event_type                                                     \n",
+       "pdf_name      1693-dynamics-of-supervised-learning-with-rest...\n",
+       "abstract                                       Abstract Missing\n",
+       "summary       Dynamics of Supervised Learning with\\nRestrict...\n",
        "Name: 757, dtype: object"
       ]
      },
-     "execution_count": 643,
+     "execution_count": 454,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 456,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +254,7 @@
        "Length: 2000, dtype: int64"
       ]
      },
-     "execution_count": 631,
+     "execution_count": 456,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,19 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfv = TfidfVectorizer(min_df=3,  max_features=None, \n",
-    "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{1,}',\n",
+    "tfv = TfidfVectorizer(max_features=None, \n",
+    "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{3,}',\n",
     "            ngram_range=(1, 3),\n",
     "            stop_words = 'english')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2000, 1270)"
+       "(2000, 18877)"
       ]
      },
-     "execution_count": 636,
+     "execution_count": 461,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +332,7 @@
     "def calc_similarity(method_name):\n",
     "    \n",
     "    if method_name == 'sigmoid_kernel':\n",
-    "        matrix = sigmoid_kernel(tfv_matrix, tfv_matrix)\n",
+    "        matrix = sigmoid_kernel(tfv_matrix, tfv_matrix,gamma = 0.8, coef0=0.5)\n",
     "    elif method_name == 'linear_kernel':\n",
     "        matrix = linear_kernel(tfv_matrix, tfv_matrix)\n",
     "    elif method_name == 'euclidean_distances':\n",
@@ -350,34 +349,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 463,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\veyso\\anaconda3\\envs\\recommendation\\lib\\site-packages\\scipy\\stats\\stats.py:3845: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
-      "  warnings.warn(PearsonRConstantInputWarning())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matrix = calc_similarity('pearsons_correlation')"
+    "matrix = calc_similarity('linear_kernel')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [],
    "source": [
     "def give_rec(title, matrix=matrix):\n",
     "    # Get the index corresponding to title\n",
-    "    #idx = indices[title]\n",
+    "    idx = indices[title]\n",
     "\n",
     "    # Get the pairwsie similarity scores \n",
-    "    sig_scores = list(enumerate(matrix))\n",
+    "    sig_scores = list(enumerate(matrix[idx]))\n",
     "\n",
     "    # Sort the paper \n",
     "    sig_scores = sorted(sig_scores, key=lambda x: x[1], reverse=True)\n",
@@ -397,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 465,
    "metadata": {
     "scrolled": true
    },
@@ -431,63 +421,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>636</td>\n",
-       "      <td>Semi-Supervised Support Vector Machines</td>\n",
-       "      <td>0.448527</td>\n",
+       "      <td>1898</td>\n",
+       "      <td>A Silicon Axon</td>\n",
+       "      <td>0.083941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1317</td>\n",
-       "      <td>ExtremeWeather: A large-scale climate dataset ...</td>\n",
-       "      <td>0.425064</td>\n",
+       "      <td>1708</td>\n",
+       "      <td>HIGH DENSITY ASSOCIATIVE MEMORIES</td>\n",
+       "      <td>0.065761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>108</td>\n",
-       "      <td>Using Unlabeled Data for Supervised Learning</td>\n",
-       "      <td>0.353135</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Single Transistor Learning Synapses</td>\n",
+       "      <td>0.064808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1281</td>\n",
-       "      <td>A Fast Stochastic Error-Descent Algorithm for ...</td>\n",
-       "      <td>0.327352</td>\n",
+       "      <td>370</td>\n",
+       "      <td>Dynamic Stochastic Synapses as Computational U...</td>\n",
+       "      <td>0.056846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>631</td>\n",
-       "      <td>Dynamics of Supervised Learning with Restricte...</td>\n",
-       "      <td>0.229080</td>\n",
+       "      <td>1778</td>\n",
+       "      <td>Analysis of Short Term Memories for Neural Net...</td>\n",
+       "      <td>0.053677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>757</td>\n",
-       "      <td>Dynamics of Supervised Learning with Restricte...</td>\n",
-       "      <td>0.220103</td>\n",
+       "      <td>1735</td>\n",
+       "      <td>WATTLE: A Trainable Gain Analogue VLSI Neural ...</td>\n",
+       "      <td>0.050006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>247</td>\n",
-       "      <td>Learning from Demonstration</td>\n",
-       "      <td>0.170683</td>\n",
+       "      <td>990</td>\n",
+       "      <td>A Silicon Primitive for Competitive Learning</td>\n",
+       "      <td>0.049418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>643</td>\n",
-       "      <td>Perceiving without Learning: From Spirals to I...</td>\n",
-       "      <td>0.170683</td>\n",
+       "      <td>754</td>\n",
+       "      <td>Bifurcation Analysis of a Silicon Neuron</td>\n",
+       "      <td>0.049018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>650</td>\n",
-       "      <td>Learning to Find Pictures of People</td>\n",
-       "      <td>0.170683</td>\n",
+       "      <td>1905</td>\n",
+       "      <td>Scaling Properties of Coarse-Coded Symbol Memo...</td>\n",
+       "      <td>0.048851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>765</td>\n",
-       "      <td>Song Learning in Birds</td>\n",
-       "      <td>0.170683</td>\n",
+       "      <td>7</td>\n",
+       "      <td>ICEG Morphology Classification using an Analog...</td>\n",
+       "      <td>0.047688</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -495,26 +485,26 @@
       ],
       "text/plain": [
        "   paper_id                                              title     score\n",
-       "0       636            Semi-Supervised Support Vector Machines  0.448527\n",
-       "1      1317  ExtremeWeather: A large-scale climate dataset ...  0.425064\n",
-       "2       108       Using Unlabeled Data for Supervised Learning  0.353135\n",
-       "3      1281  A Fast Stochastic Error-Descent Algorithm for ...  0.327352\n",
-       "4       631  Dynamics of Supervised Learning with Restricte...  0.229080\n",
-       "5       757  Dynamics of Supervised Learning with Restricte...  0.220103\n",
-       "6       247                        Learning from Demonstration  0.170683\n",
-       "7       643  Perceiving without Learning: From Spirals to I...  0.170683\n",
-       "8       650                Learning to Find Pictures of People  0.170683\n",
-       "9       765                             Song Learning in Birds  0.170683"
+       "0      1898                                     A Silicon Axon  0.083941\n",
+       "1      1708                  HIGH DENSITY ASSOCIATIVE MEMORIES  0.065761\n",
+       "2      1995                Single Transistor Learning Synapses  0.064808\n",
+       "3       370  Dynamic Stochastic Synapses as Computational U...  0.056846\n",
+       "4      1778  Analysis of Short Term Memories for Neural Net...  0.053677\n",
+       "5      1735  WATTLE: A Trainable Gain Analogue VLSI Neural ...  0.050006\n",
+       "6       990       A Silicon Primitive for Competitive Learning  0.049418\n",
+       "7       754           Bifurcation Analysis of a Silicon Neuron  0.049018\n",
+       "8      1905  Scaling Properties of Coarse-Coded Symbol Memo...  0.048851\n",
+       "9         7  ICEG Morphology Classification using an Analog...  0.047688"
       ]
      },
-     "execution_count": 640,
+     "execution_count": 465,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Testing our content-based recommendation system with Genetic Algorithms and its use with back-propagation network\n",
-    "give_rec('Semi-supervised Learning with Ladder Networks').head(10)"
+    "give_rec('Pulsestream Synapses with Non-Volatile Analogue Amorphous-Silicon Memories').head(10)"
    ]
   },
   {
