--- a/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
+++ b/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
     "from sklearn.metrics.pairwise import sigmoid_kernel\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from scipy.stats import pearsonr\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "4              A Deep Reinforcement Learning Chatbot  2017  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        "Name: 757, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 145,
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +286,7 @@
        "Length: 6000, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ind = indices['Semi-supervised Learning with Ladder Networks']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind = indices['Semi-Supervised Learning with Ladder Networks']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,16 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "papers_df['all_content'] =  papers_df['title']"
+    "papers_df['all_content'] =  papers_df['title'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +354,7 @@
        "(6000, 55633)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +378,8 @@
     "        matrix = linear_kernel(tfv_matrix, tfv_matrix)\n",
     "    elif method_name == 'euclidean_distances':\n",
     "        matrix = euclidean_distances(tfv_matrix)\n",
+    "    elif method_name == 'cosine_similarity':\n",
+    "        matrix = cosine_similarity(tfv_matrix)\n",
     "    elif method_name == 'pearsons_correlation':\n",
     "        tfv_array = tfv_matrix.toarray()\n",
     "        matrix = []\n",
@@ -389,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix = calc_similarity('linear_kernel')"
+    "matrix = calc_similarity('cosine_similarity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +421,7 @@
     "    data = []\n",
     "    count = 0\n",
     "    while count<10:\n",
-    "        data.append([sig_scores[count][0],(papers_df['title'].iloc[sig_scores[count][0]]), sig_scores[count][1]])\n",
+    "        data.append([sig_scores[count][0],(papers_df['all_content'].iloc[sig_scores[count][0]]), sig_scores[count][1]])\n",
     "        count=count+1\n",
     "\n",
     "    df = pd.DataFrame(data, columns = [\"paper_id\", \"title\", \"score\"])\n",
@@ -427,9 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 155,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -537,19 +540,19 @@
        "9      5794  Analysis of Semi-Supervised Learning with the ...  0.251950"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Testing our content-based recommendation system with Genetic Algorithms and its use with back-propagation network\n",
-    "give_rec('Semi-supervised Learning with Ladder Networks').head(10)"
+    "give_rec('Semi-Supervised Learning with Ladder Networks').head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,20 +561,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5621929168701172\n"
+      "1.6665725708007812\n"
      ]
     }
    ],
    "source": [
     "print(end - start)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -590,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
