Preprocessing was added to CB.

--- a/Content-Based-Filtering/Content_Based_Filtering_PreProcessing.ipynb
+++ b/Content-Based-Filtering/Content_Based_Filtering_PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,14 @@
     "from sklearn.metrics.pairwise import euclidean_distances\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from scipy.stats import pearsonr\n",
-    "import time"
+    "import time\n",
+    "import string\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "papers_df['summary'] = papers_df['summary'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dual Recurrent Attention Units for Visual Question Answering'"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "papers_df['title'][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "papers_df['summary'] = papers_df['summary'].str.replace('[{}]'.format(string.punctuation), '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "papers_df['summary'] = papers_df['summary'].str.replace('\\d+|\\n+','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "papers_df['summary'] = papers_df['summary'].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#w_tokenizer = nltk.tokenize.WhitespaceTokenizer()\n",
+    "#englishStemmer=SnowballStemmer(\"english\") #define stemming dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def stemm_texts(text):\n",
+    "#   return [englishStemmer.stem(w) for w in w_tokenizer.tokenize(text)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#papers_df['summary'] = papers_df.summary.apply(stemm_texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'we propose an architecture for vqa which utilizes recurrent layers togenerate visual and textual attention the memory characteristic of theproposed recurrent attention units offers a rich joint embedding of visual andtextual features and enables the model to reason relations between severalparts of the image and question our single model outperforms the first placewinner on the vqa  dataset performs within margin to the currentstateoftheart ensemble model we also experiment with replacing attentionmechanisms in other stateoftheart models with our implementation and showincreased accuracy in both cases our recurrent attention mechanism improvesperformance in tasks requiring sequential or relational reasoning on the vqadataset'"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "papers_df['summary'][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +219,7 @@
        "'1711.07459v1'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 280,
    "metadata": {
     "scrolled": true
    },
@@ -156,7 +263,7 @@
        "Length: 6000, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6000, 823367)"
+       "(6000, 906840)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 290,
    "metadata": {
     "scrolled": false
    },
@@ -334,63 +441,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1506.08349v1</td>\n",
-       "      <td>Improved Deep Speaker Feature Learning for Tex...</td>\n",
-       "      <td>0.515810</td>\n",
+       "      <td>1505.06427v1</td>\n",
+       "      <td>Deep Speaker Vectors for Semi Text-independent...</td>\n",
+       "      <td>0.503852</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1505.06427v1</td>\n",
-       "      <td>Deep Speaker Vectors for Semi Text-independent...</td>\n",
-       "      <td>0.513225</td>\n",
+       "      <td>1503.05471v1</td>\n",
+       "      <td>Shared latent subspace modelling within Gaussi...</td>\n",
+       "      <td>0.500789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1603.09643v4</td>\n",
-       "      <td>Multi-task Recurrent Model for Speech and Spea...</td>\n",
-       "      <td>0.499335</td>\n",
+       "      <td>1506.08349v1</td>\n",
+       "      <td>Improved Deep Speaker Feature Learning for Tex...</td>\n",
+       "      <td>0.495004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1607.00410v1</td>\n",
-       "      <td>Domain Adaptation for Neural Networks by Param...</td>\n",
-       "      <td>0.496043</td>\n",
+       "      <td>1504.01483v1</td>\n",
+       "      <td>Transferring Knowledge from a RNN to a DNN</td>\n",
+       "      <td>0.487860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1503.05471v1</td>\n",
-       "      <td>Shared latent subspace modelling within Gaussi...</td>\n",
-       "      <td>0.495795</td>\n",
+       "      <td>1607.00410v1</td>\n",
+       "      <td>Domain Adaptation for Neural Networks by Param...</td>\n",
+       "      <td>0.487703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1609.08337v1</td>\n",
-       "      <td>Multi-task Recurrent Model for True Multilingu...</td>\n",
-       "      <td>0.495231</td>\n",
+       "      <td>1508.01746v2</td>\n",
+       "      <td>Using Deep Learning for Detecting Spoofing Att...</td>\n",
+       "      <td>0.487620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1301.3605v3</td>\n",
-       "      <td>Feature Learning in Deep Neural Networks - Stu...</td>\n",
-       "      <td>0.494021</td>\n",
+       "      <td>1710.10467v2</td>\n",
+       "      <td>Generalized End-to-End Loss for Speaker Verifi...</td>\n",
+       "      <td>0.485437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1406.7806v2</td>\n",
-       "      <td>Building DNN Acoustic Models for Large Vocabul...</td>\n",
-       "      <td>0.492200</td>\n",
+       "      <td>1603.09643v4</td>\n",
+       "      <td>Multi-task Recurrent Model for Speech and Spea...</td>\n",
+       "      <td>0.483340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1508.01746v2</td>\n",
-       "      <td>Using Deep Learning for Detecting Spoofing Att...</td>\n",
-       "      <td>0.488056</td>\n",
+       "      <td>1504.01482v1</td>\n",
+       "      <td>Deep Recurrent Neural Networks for Acoustic Mo...</td>\n",
+       "      <td>0.482402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1504.01482v1</td>\n",
-       "      <td>Deep Recurrent Neural Networks for Acoustic Mo...</td>\n",
-       "      <td>0.486746</td>\n",
+       "      <td>1711.02074v1</td>\n",
+       "      <td>End-to-End Abnormality Detection in Medical Im...</td>\n",
+       "      <td>0.481828</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -398,19 +505,19 @@
       ],
       "text/plain": [
        "             id                                              title     score\n",
-       "0  1506.08349v1  Improved Deep Speaker Feature Learning for Tex...  0.515810\n",
-       "1  1505.06427v1  Deep Speaker Vectors for Semi Text-independent...  0.513225\n",
-       "2  1603.09643v4  Multi-task Recurrent Model for Speech and Spea...  0.499335\n",
-       "3  1607.00410v1  Domain Adaptation for Neural Networks by Param...  0.496043\n",
-       "4  1503.05471v1  Shared latent subspace modelling within Gaussi...  0.495795\n",
-       "5  1609.08337v1  Multi-task Recurrent Model for True Multilingu...  0.495231\n",
-       "6   1301.3605v3  Feature Learning in Deep Neural Networks - Stu...  0.494021\n",
-       "7   1406.7806v2  Building DNN Acoustic Models for Large Vocabul...  0.492200\n",
-       "8  1508.01746v2  Using Deep Learning for Detecting Spoofing Att...  0.488056\n",
-       "9  1504.01482v1  Deep Recurrent Neural Networks for Acoustic Mo...  0.486746"
+       "0  1505.06427v1  Deep Speaker Vectors for Semi Text-independent...  0.503852\n",
+       "1  1503.05471v1  Shared latent subspace modelling within Gaussi...  0.500789\n",
+       "2  1506.08349v1  Improved Deep Speaker Feature Learning for Tex...  0.495004\n",
+       "3  1504.01483v1         Transferring Knowledge from a RNN to a DNN  0.487860\n",
+       "4  1607.00410v1  Domain Adaptation for Neural Networks by Param...  0.487703\n",
+       "5  1508.01746v2  Using Deep Learning for Detecting Spoofing Att...  0.487620\n",
+       "6  1710.10467v2  Generalized End-to-End Loss for Speaker Verifi...  0.485437\n",
+       "7  1603.09643v4  Multi-task Recurrent Model for Speech and Spea...  0.483340\n",
+       "8  1504.01482v1  Deep Recurrent Neural Networks for Acoustic Mo...  0.482402\n",
+       "9  1711.02074v1  End-to-End Abnormality Detection in Medical Im...  0.481828"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.5055320262908936\n"
+      "7.056185960769653\n"
      ]
     }
    ],
