--- a/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
+++ b/Content-Based-Filtering/Content_Based_Filtering_v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "'1711.07459v1'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -156,7 +156,7 @@
        "Length: 6000, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "papers_df['all_content'] =  papers_df['summary']"
+    "papers_df['all_content'] =  papers_df['title']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6000, 823367)"
+       "(6000, 55633)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -334,63 +334,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1506.08349v1</td>\n",
-       "      <td>Improved Deep Speaker Feature Learning for Tex...</td>\n",
-       "      <td>0.515810</td>\n",
+       "      <td>1711.07476v2</td>\n",
+       "      <td>Virtual Adversarial Ladder Networks For Semi-s...</td>\n",
+       "      <td>0.679026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1505.06427v1</td>\n",
-       "      <td>Deep Speaker Vectors for Semi Text-independent...</td>\n",
-       "      <td>0.513225</td>\n",
+       "      <td>1707.09219v4</td>\n",
+       "      <td>Recurrent Ladder Networks</td>\n",
+       "      <td>0.635579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1603.09643v4</td>\n",
-       "      <td>Multi-task Recurrent Model for Speech and Spea...</td>\n",
-       "      <td>0.499335</td>\n",
+       "      <td>1611.02320v1</td>\n",
+       "      <td>Adversarial Ladder Networks</td>\n",
+       "      <td>0.634850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1607.00410v1</td>\n",
-       "      <td>Domain Adaptation for Neural Networks by Param...</td>\n",
-       "      <td>0.496043</td>\n",
+       "      <td>1406.5298v2</td>\n",
+       "      <td>Semi-Supervised Learning with Deep Generative ...</td>\n",
+       "      <td>0.631932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1503.05471v1</td>\n",
-       "      <td>Shared latent subspace modelling within Gaussi...</td>\n",
-       "      <td>0.495795</td>\n",
+       "      <td>1612.01756v3</td>\n",
+       "      <td>Video Ladder Networks</td>\n",
+       "      <td>0.629081</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1609.08337v1</td>\n",
-       "      <td>Multi-task Recurrent Model for True Multilingu...</td>\n",
-       "      <td>0.495231</td>\n",
+       "      <td>1706.02124v2</td>\n",
+       "      <td>Semi-Supervised Phoneme Recognition with Recur...</td>\n",
+       "      <td>0.619887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1301.3605v3</td>\n",
-       "      <td>Feature Learning in Deep Neural Networks - Stu...</td>\n",
-       "      <td>0.494021</td>\n",
+       "      <td>1803.01216v1</td>\n",
+       "      <td>Deep Bayesian Active Semi-Supervised Learning</td>\n",
+       "      <td>0.616180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1406.7806v2</td>\n",
-       "      <td>Building DNN Acoustic Models for Large Vocabul...</td>\n",
-       "      <td>0.492200</td>\n",
+       "      <td>1509.01168v1</td>\n",
+       "      <td>Semi-described and semi-supervised learning wi...</td>\n",
+       "      <td>0.611418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1508.01746v2</td>\n",
-       "      <td>Using Deep Learning for Detecting Spoofing Att...</td>\n",
-       "      <td>0.488056</td>\n",
+       "      <td>1202.3702v1</td>\n",
+       "      <td>Semi-supervised Learning with Density Based Di...</td>\n",
+       "      <td>0.606573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1504.01482v1</td>\n",
-       "      <td>Deep Recurrent Neural Networks for Acoustic Mo...</td>\n",
-       "      <td>0.486746</td>\n",
+       "      <td>1206.5240v1</td>\n",
+       "      <td>Analysis of Semi-Supervised Learning with the ...</td>\n",
+       "      <td>0.605357</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -398,19 +398,19 @@
       ],
       "text/plain": [
        "             id                                              title     score\n",
-       "0  1506.08349v1  Improved Deep Speaker Feature Learning for Tex...  0.515810\n",
-       "1  1505.06427v1  Deep Speaker Vectors for Semi Text-independent...  0.513225\n",
-       "2  1603.09643v4  Multi-task Recurrent Model for Speech and Spea...  0.499335\n",
-       "3  1607.00410v1  Domain Adaptation for Neural Networks by Param...  0.496043\n",
-       "4  1503.05471v1  Shared latent subspace modelling within Gaussi...  0.495795\n",
-       "5  1609.08337v1  Multi-task Recurrent Model for True Multilingu...  0.495231\n",
-       "6   1301.3605v3  Feature Learning in Deep Neural Networks - Stu...  0.494021\n",
-       "7   1406.7806v2  Building DNN Acoustic Models for Large Vocabul...  0.492200\n",
-       "8  1508.01746v2  Using Deep Learning for Detecting Spoofing Att...  0.488056\n",
-       "9  1504.01482v1  Deep Recurrent Neural Networks for Acoustic Mo...  0.486746"
+       "0  1711.07476v2  Virtual Adversarial Ladder Networks For Semi-s...  0.679026\n",
+       "1  1707.09219v4                          Recurrent Ladder Networks  0.635579\n",
+       "2  1611.02320v1                        Adversarial Ladder Networks  0.634850\n",
+       "3   1406.5298v2  Semi-Supervised Learning with Deep Generative ...  0.631932\n",
+       "4  1612.01756v3                              Video Ladder Networks  0.629081\n",
+       "5  1706.02124v2  Semi-Supervised Phoneme Recognition with Recur...  0.619887\n",
+       "6  1803.01216v1      Deep Bayesian Active Semi-Supervised Learning  0.616180\n",
+       "7  1509.01168v1  Semi-described and semi-supervised learning wi...  0.611418\n",
+       "8   1202.3702v1  Semi-supervised Learning with Density Based Di...  0.606573\n",
+       "9   1206.5240v1  Analysis of Semi-Supervised Learning with the ...  0.605357"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,12 +419,12 @@
     "# Testing our content-based recommendation system with Genetic Algorithms and its use with back-propagation network\n",
     "\n",
     "#str = 'Multiresolution Recurrent Neural Networks: An Application To Dialogue Response Generation'\n",
-    "give_rec('A Unified Deep Neural Network for Speaker and Language Recognition').head(10)"
+    "give_rec('Semi-Supervised Learning with Ladder Networks').head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.5055320262908936\n"
+      "0.8944108486175537\n"
      ]
     }
    ],
